--- a/contact-styles.scss
+++ b/contact-styles.scss
@@ -7,6 +7,7 @@
 
 #contact-us {
   background-color: #f3f6ff;
+  height: 48.5625rem;
 
   .contact-us-container {
     width: 100%;
@@ -22,6 +23,7 @@
     width: 100%;
     padding-left: 1rem;
     padding-right: 1rem;
+    margin-top: 2.5rem;
 
     .breadcrumb-link {
       display: flex;
@@ -40,6 +42,59 @@
 
     .breadcrumb-divider {
       margin: 0 0.5rem;
+    }
+  }
+
+  .contact-elements {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin-top: 4.5rem;
+
+    .contact-info {
+      display: flex;
+      flex-direction: column;
+
+      .email-us {
+        display: flex;
+        gap: 1.5rem;
+        align-items: flex-start;
+        margin-top: 4.5rem;
+
+        .email-us-text {
+          display: flex;
+          flex-direction: column;
+          gap: 1.5625rem;
+
+          .leave-message {
+            display: flex;
+            color: $primary;
+            align-items: center;
+            gap: 0.5rem;
+          }
+        }
+      }
+
+      .careers {
+        display: flex;
+        gap: 1.5rem;
+        align-items: flex-start;
+        margin-top: 2.8125rem;
+
+        .careers-text {
+          display: flex;
+          flex-direction: column;
+          gap: 1.5625rem;
+
+          .send-application {
+            display: flex;
+            color: $primary;
+            align-items: center;
+            gap: 0.5rem;
+          }
+        }
+      }
     }
   }
 }
