started working on the consultation card

--- a/_colors.scss
+++ b/_colors.scss
@@ -2,6 +2,7 @@
 $background-light: #f3f6ff;
 $secondary: #eff2fc;
 $divider-border: #e2e5f1;
+$forms-border: #d4d7e5;
 $input-placeholder: #b4b7c9;
 $muted-text: #9397ad;
 $body-text: #565973;
