--- a/styles.scss
+++ b/styles.scss
@@ -1,3 +1,4 @@
+@import "mixins";
 @import "colors";
 @import "buttons";
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap");
