--- a/contact-styles.css
+++ b/contact-styles.css
@@ -225,4 +225,51 @@
 }
 #contact-us .contact-elements .consultation .consultation-wrapper button[type=submit]:active {
   background-color: #7a7df3;
+}
+
+#map-section .map-container {
+  display: flex;
+  width: 100%;
+  max-width: 81rem;
+  margin: 0 auto;
+  justify-content: space-between;
+  margin-top: 6rem;
+  margin-bottom: 33.875rem;
+}
+#map-section .map-container .adresses {
+  display: flex;
+  flex-direction: column;
+  width: 31.25rem;
+  align-items: center;
+  gap: 3.125rem;
+}
+#map-section .map-container .adresses .medical-center-1,
+#map-section .map-container .adresses .medical-center-2 {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+  width: 100%;
+  align-items: flex-start;
+  text-align: left;
+  max-width: 28rem;
+}
+#map-section .map-container .adresses .medical-center-1 span,
+#map-section .map-container .adresses .medical-center-2 span {
+  color: #6366f1;
+}
+#map-section .map-container .adresses .medical-center-1 h4,
+#map-section .map-container .adresses .medical-center-2 h4 {
+  color: #0b0f19;
+  font-size: 1.5rem;
+  font-weight: 800;
+}
+#map-section .map-container .adresses .medical-center-1 p,
+#map-section .map-container .adresses .medical-center-2 p {
+  color: #565973;
+  font-size: 1rem;
+  font-weight: 400;
+}
+#map-section .map-container .adresses .medical-center-1 .times-wrapper,
+#map-section .map-container .adresses .medical-center-2 .times-wrapper {
+  text-align: right;
 }/*# sourceMappingURL=contact-styles.css.map */
