--- a/contact-styles.scss
+++ b/contact-styles.scss
@@ -251,3 +251,54 @@
     }
   }
 }
+
+#map-section {
+  .map-container {
+    display: flex;
+    width: 100%;
+    max-width: 81rem;
+    margin: 0 auto;
+    justify-content: space-between;
+    margin-top: 6rem;
+    margin-bottom: 33.875rem;
+
+    .adresses {
+      display: flex;
+      flex-direction: column;
+      width: 31.25rem;
+      align-items: center;
+      gap: 3.125rem;
+
+      .medical-center-1,
+      .medical-center-2 {
+        display: flex;
+        flex-direction: column;
+        gap: 0.75rem;
+        width: 100%;
+        align-items: flex-start;
+        text-align: left;
+        max-width: 28rem;
+
+        span {
+          color: $primary;
+        }
+
+        h4 {
+          @each $property, $value in $heading-h4 {
+            #{$property}: $value;
+          }
+        }
+
+        p {
+          @each $property, $value in $m-text {
+            #{$property}: $value;
+          }
+        }
+
+        .times-wrapper {
+          text-align: right;
+        }
+      }
+    }
+  }
+}
